--- a/style.css
+++ b/style.css
@@ -1,4 +1,23 @@
-header{
-    background-color: white;
-    color:black;
+*{
+    margin: 0;
+    padding: 0;
+}
+
+.cabecalho{
+    background-color: black;
+    color: aliceblue;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 24px 0;
+}
+
+.cabecalho-imagem{
+    width: 20%;
+}
+
+.cabecalho-lista-item{
+    display: block;
+    margin: 0 16px;
+    font-size: 24px;
 }
