--- a/style.css
+++ b/style.css
@@ -64,3 +64,16 @@
 .escola-titulo{
     padding: 24px 0;
 }
+ 
+.estudante-imagem{
+    width: 150px;
+}
+
+.estudante-icone{
+    width: 50px;
+}
+
+.estudante-div{
+    text-align: center;
+    padding: 16px 0;
+}
